--- a/frontend/src/app/managementportal/components/kamers/kamers.component.scss
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.scss
@@ -35,6 +35,9 @@
 .table-small{
   width: 800px;
 }
+.selectedRow{
+  background-color: lightgreen
+}
 
 /* .table-striped>tbody>tr:nth-child(odd)>td,
 .table-striped>tbody>tr:nth-child(odd)>th {
