--- a/frontend/src/app/shared/components/form-activiteit-maak-reservering/form-activiteit-maak-reservering.component.html
+++ b/frontend/src/app/shared/components/form-activiteit-maak-reservering/form-activiteit-maak-reservering.component.html
@@ -19,33 +19,21 @@
         <div class="form-group">
             <label>Activiteit</label>
             <input
+                disabled="true"
                 type="string"
                 class="form-control"
                 formControlName="actNaam"
-                [class.is-invalid]="actNaam?.invalid && actNaam?.touched"
                 ngbAutofocus
             >
-            <small
-                class="text-danger"
-                [class.d-none]="actNaam?.valid || actNaam?.untouched"
-            >
-                Activiteit
-            </small>
         </div>
         <div class="form-group">
             <label>Datum</label>
             <input
+                disabled="true"
                 type="string"
                 class="form-control"
                 formControlName="actDate"
-                [class.is-invalid]="actDate?.invalid && actDate?.touched"
             >
-            <small
-                class="text-danger"
-                [class.d-none]="actDate?.valid || actDate?.untouched"
-            >
-                Datum.
-            </small>
         </div>
         <div class="form-group">
             <label>E-mail gast</label>
@@ -98,7 +86,8 @@
             type="button"
             class="btn btn-success"
             (click)="submitForm()"
-            [disabled]="activiteitMaakResForm.invalid">
+            [disabled]="activiteitMaakResForm.invalid"
+        >
             Save
         </button>
     </div>
