--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
@@ -1,8 +1,7 @@
 <!-- <pre>{{kamerreserveringen$ | async | json}}</pre> -->
  <!--<pre>{{booking | json}}</pre>-->
 <br/>
-{{datumvan}}
-<div class="row" *ngIf="loadSpinner; else showSpinner">
+<div  *ngIf="showSpinnerOnLoad; else showSpinner;">
   <div class="row">
     <div class="col-10 d-flex text-sm-center">
       <button type="button" class="btn btn-outline-primary btn-sm" (click)="backToOverview(); resetInitialValues()">
@@ -140,12 +139,19 @@
                 <div class="form-group col-sm-5">
                   <div class="custom-control custom-switch">
                     <br/>
-                    <input type="checkbox" class="custom-control-input" id="inchecken"  [(ngModel)]="inchecken" [ngModelOptions]="{standalone: true}" [disabled]="inchecken">
-                    <label class="custom-control-label" for="inchecken"> Inchecken </label>
+                    <div *ngIf="incheckenToegestaan">
+                      <input type="checkbox" class="custom-control-input" id="inchecken_toegestaan"  [(ngModel)]="inchecken" [ngModelOptions]="{standalone: true}" [disabled]="inchecken">
+                      <label class="custom-control-label" for="inchecken_toegestaan"> Inchecken </label>
+                    </div>
+                    <div *ngIf="!incheckenToegestaan">
+                      <input type="checkbox" class="custom-control-input" id="inchecken_niettoegestaan"  [(ngModel)]="inchecken_niettoegestaan" [ngModelOptions]="{standalone: true}" [disabled]="true">
+                      <label class="custom-control-label" for="inchecken_niettoegestaan"> Inchecken niet mogelijk.</label>
+                    </div>
+
                   </div>
                 </div>
                 <div class="form-group col-sm-5">
-                  <div *ngIf="inchecken">
+                  <div *ngIf="incheckenToegestaan">
                     <br/>
                     <div>op: {{ kamerreserveringdetailsormgroup.value.inchecken || todayDate}}</div>
                   </div>
@@ -156,8 +162,14 @@
                 </div>
                 <div class="form-group col-sm-5">
                   <div class="custom-control custom-switch">
-                    <input type="checkbox" class="custom-control-input" id="uitchecken" [(ngModel)]="uitchecken" [ngModelOptions]="{standalone: true}" [disabled]="uitchecken">
-                    <label class="custom-control-label" for="uitchecken"> Uitchecken </label>
+                    <div *ngIf="incheckenToegestaan">
+                      <input type="checkbox" class="custom-control-input" id="uitchecken_toestaan" [(ngModel)]="uitchecken" [ngModelOptions]="{standalone: true}" [disabled]="uitchecken">
+                      <label class="custom-control-label" for="uitchecken_toestaan"> Uitchecken </label>
+                    </div>
+                    <div *ngIf="!incheckenToegestaan">
+                      <input type="checkbox" class="custom-control-input" id="uitchecken_niettoestaan" [(ngModel)]="uitchecken_toestaan" [ngModelOptions]="{standalone: true}" [disabled]="true">
+                      <label class="custom-control-label" for="uitchecken_niettoestaan"> Uitchecken niet mogelijk</label>
+                    </div>
                   </div>
                 </div>
                 <div class="form-group col-sm-5">
@@ -280,7 +292,9 @@
 
 
 <ng-template #showSpinner>
-  <div class="spinner-grow" role="status">
-    <span class="sr-only">Loading...</span>
+  <div class="d-flex justify-content-center modal-dialog-centered">
+    <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
+      <span class="sr-only">Gegevens worden geladen...</span>
+    </div>
   </div>
 </ng-template>
