--- a/frontend/src/app/managementportal/managementportal.component.html
+++ b/frontend/src/app/managementportal/managementportal.component.html
@@ -12,7 +12,7 @@
                 class="nav-link"
                 (click)="logout()"
             >
-                Sign out
+                Uitloggen
             </a>
         </li>
 
@@ -23,7 +23,7 @@
                 class="nav-link"
                 [routerLink]="['/managementportal/signup']"
             >
-                Add user
+                Gebruiker toevoegen
             </a>
         </li>
     </ul>
