--- a/frontend/src/app/frontend/components/login/login.component.html
+++ b/frontend/src/app/frontend/components/login/login.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
     <div class="form-group">
-        <label for="login-form-email">Email address</label>
+        <label for="login-form-email">E-mailadres</label>
         <input type="email"
                [formControl]="loginForm.controls.userName"
                class="form-control"
@@ -10,13 +10,13 @@
                aria-describedby="login-form-email-help"
                placeholder="Enter username">
         <div class="text-danger" *ngIf="loginForm.controls.userName.invalid && !loginForm.controls.userName.pristine">
-            Please provide a valid email address
+            Voer een geldig E-mailadres in
         </div>
-        <small id="login-form-email-help" class="form-text text-muted">enter a valid email address</small>
+        <!--small id="login-form-email-help" class="form-text text-muted">Voer het E-mailadres in</small-->
     </div>
 
     <div class="form-group">
-        <label for="login-form-password">Password</label>
+        <label for="login-form-password">Wachtwoord</label>
         <input type="password"
                [formControl]="loginForm.controls.password"
                class="form-control"
@@ -24,10 +24,10 @@
                aria-describedby="login-form-password-help"
                placeholder="Password">
         <div class="text-danger" *ngIf="loginForm.controls.password.invalid && !loginForm.controls.password.pristine">
-            password is required
+            wachtwoord is verplicht
         </div>
-        <small id="login-form-password-help" class="form-text text-muted">enter your password
-        </small>
+        <!--small id="login-form-password-help" class="form-text text-muted">Voer het wachtwoord in
+        </small-->
     </div>
 
     <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">log in</button>
