--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -117,3 +117,6 @@ header {
     border-bottom: 10px solid black;
     display: inline-block;
   }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
