--- a/frontend/src/app/frontend/shared/components/gast-kamerreservering/gast-kamerreservering.component.html
+++ b/frontend/src/app/frontend/shared/components/gast-kamerreservering/gast-kamerreservering.component.html
@@ -31,20 +31,17 @@
         </select>
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.aantalpersonen.valid || kamerreserveringForm.controls.aantalpersonen.untouched">Vereist</small>
       </div>
-      <div class="form-group col-md-6">
-        <label>Aantal nachten</label>
-        <label type="text" class="form-control" >{{aantalnachten}}</label>  
-      </div>
     </div>
 
     <div *ngIf="showselectroom" class="container, form-row">
       <div class="form-group col-md-6">
         <label *ngIf="!showroom2">Selecteer een {{personen1}}</label>
-        <span *ngIf="showroom2">Selecteer twee kamers:</span>
+        <span *ngIf="showroom2">Selecteer twee kamers:<br></span>
         <label *ngIf="showroom2">Eerste kamer: {{personen1}}</label>
         <select (change)="room1Selected(kamerreserveringForm.controls.kamernaam1.value, kamerreserveringForm.controls.aantalpersonen.value)" class="form-control" formControlName="kamernaam1" [class.is-invalid]="kamerreserveringForm.controls.kamernaam1.invalid && kamerreserveringForm.controls.kamernaam1.touched" ngbAutofocus >
-          <option value="" disabled>--Selecteer een kamer--</option>
-          <option *ngFor="let kamer1 of room1Array" [value]="[kamer1.kamerNaam, kamer1.prijs]">{{kamer1.kamerType}}, {{kamer1.kamerLigging}},  € {{kamer1.prijs}},-</option>
+            <option *ngIf="vacantyRoom1 === true" value="" disabled>-- Selecteer een kamer --</option>
+            <option *ngIf="vacantyRoom1 === false" value="" disabled>-- Helaas niet beschikbaar --</option>
+            <option *ngFor="let kamer1 of room1Array" [value]="[kamer1.kamerNaam, kamer1.prijs]">{{kamer1.kamerType}}, {{kamer1.kamerLigging}},  € {{kamer1.prijs}},-</option>
         </select>
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.kamernaam1.valid || kamerreserveringForm.controls.kamernaam1.untouched">Vereist</small>
       </div>
@@ -52,7 +49,8 @@
         <br>
         <label>Tweede Kamer: {{personen2}}</label>
           <select (change)="room2Selected(kamerreserveringForm.controls.kamernaam2.value)" class="form-control" formControlName="kamernaam2" [class.is-invalid]="kamerreserveringForm.controls.kamernaam2.invalid && kamerreserveringForm.controls.kamernaam2.touched" ngbAutofocus >
-          <option value="" disabled>--Selecteer een kamer--</option>
+          <option *ngIf="vacantyRoom2 === true" value="" disabled>-- Selecteer een kamer --</option>
+          <option *ngIf="vacantyRoom2 === false" value="" disabled>-- Helaas niet beschikbaar --</option>
           <option *ngFor="let kamer2 of room2Array" [value]="[kamer2.kamerNaam, kamer2.prijs]">{{kamer2.kamerType}}, {{kamer2.kamerLigging}},  € {{kamer2.prijs}},-</option>
         </select>
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.kamernaam2.valid || kamerreserveringForm.controls.kamernaam2.untouched">Vereist</small>
@@ -60,32 +58,36 @@
     </div>
 
     <div class="container, form-row">
-      <div class="form-group col-md-12">
+      <div class="form-group col-md-6">
         <label>Totaal prijs</label>
-         <label type="text" class="form-control" >€ {{totalprice}},-</label>  
-      </div>
+        <label type="text" class="form-control" >€ {{totalprice}},-</label>  
+       </div>
+       <div class="form-group col-md-6">
+         <label>Aantal nachten</label>
+         <label type="text" class="form-control" >{{aantalnachten}}</label>  
+       </div>
     </div>
-
+  
     <div *ngIf="showfillinfo">
     <div class="container, form-row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-3">
         <label>Voornaam</label>
         <input type="text" class="form-control" formControlName="voornaam" [class.is-invalid]="kamerreserveringForm.controls.voornaam.invalid && kamerreserveringForm.controls.voornaam.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.voornaam.valid || kamerreserveringForm.controls.voornaam.untouched">Vereist</small>
      </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-9">
         <label>Achternaam</label>
         <input type="text" class="form-control" formControlName="achternaam" [class.is-invalid]="kamerreserveringForm.controls.achternaam.invalid && kamerreserveringForm.controls.achternaam.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.achternaam?.valid || kamerreserveringForm.controls.achternaam.untouched">Vereist</small>
       </div>
     </div>
     <div class="container, form-row">
-      <div class="form-group col-md-5">
+      <div class="form-group col-md-4">
         <label>Telefoonnummer</label>
         <input type="text" class="form-control" formControlName="telefoonnummer" [class.is-invalid]="kamerreserveringForm.controls.telefoonnummer.invalid && kamerreserveringForm.controls.telefoonnummer.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.telefoonnummer.valid || kamerreserveringForm.controls.telefoonnummer.untouched">Vereist</small>
       </div>
-      <div class="form-group col-md-7">
+      <div class="form-group col-md-8">
         <label>E-mailadres</label>
         <input type="text" class="form-control" formControlName="emailadres" [class.is-invalid]="kamerreserveringForm.controls.emailadres.invalid && kamerreserveringForm.controls.emailadres.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.emailadres.valid || kamerreserveringForm.controls.emailadres.untouched">Vereist</small>
@@ -104,12 +106,12 @@
       </div>
     </div>
     <div class="container, form-row">
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-2">
         <label>Postcode</label>
         <input type="text" class="form-control" formControlName="postcode" [class.is-invalid]="kamerreserveringForm.controls.postcode.invalid && kamerreserveringForm.controls.postcode.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.postcode.valid || kamerreserveringForm.controls.postcode.untouched">Vereist</small>
       </div>
-      <div class="form-group col-md-9">
+      <div class="form-group col-md-10">
         <label>Woonplaats</label>
         <input type="text" class="form-control" formControlName="woonplaats" [class.is-invalid]="kamerreserveringForm.controls.woonplaats.invalid && kamerreserveringForm.controls.woonplaats.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.woonplaats.valid || kamerreserveringForm.controls.woonplaats.untouched">Vereist</small>
@@ -132,3 +134,12 @@
     <button type="button" class="btn btn-success" (click)="submitForm(kamerreserveringForm.controls.kamernaam1.value, kamerreserveringForm.controls.kamernaam2.value)" [disabled]="kamerreserveringForm.invalid">Bevestigen</button>
   </div>
 </div>
+
+<div *ngIf="!showselectroom">
+    <p  class="text-center">selecteer aub het aantal personen</p>
+</div>
+
+<div *ngIf="showselectroom && !showfillinfo">
+    <p  class="text-center">selecteer aub kamer(s)</p>
+</div>
+
