--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
@@ -13,6 +13,9 @@
       <button type="button" class="btn btn-outline-primary btn-sm" (click)="openBookingEmailForm()">
         Factuur e-mailen
       </button>
+      <button type="button" class="btn btn-outline-primary btn-sm" (click)="openBookingDownloadForm()">
+        Factuur downloaden
+      </button>
     </div>
     <div class="col-2 d-flex text-sm-center">
       <button type="button" class="btn btn-outline-danger btn-sm" (click)="saveChangesToBooking()">
