--- a/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -51,7 +51,7 @@
                             type="button"
                             class="btn btn-primary btn-block btn-primary movelake"
                         >
-                            Planning an aanmelden
+                            Meld je aan
                         </button>
                     </p>
                 </td>
