--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -25,7 +25,7 @@
                         class="fas fa-edit mr-2"
                         placement="top"
                         ngbTooltip="Wijzigen"
-                        (click)="openFormActiviteitResModal(reservering)"
+                        (click)="openFormActiviteitResModal(reservering.planning.planid, reservering)"
                     ></i>
                     <i
                         class="fas fa-trash-alt mr-2"
