--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringdetails/kamerreserveringdetails.component.html
@@ -187,19 +187,25 @@
                 <div class="form-group col-sm-1">
                 </div>
                 <div class="form-group col-sm-6">
-                  <div *ngIf="!inchecken">
-                    <br />
-                    <br />
-                    <br />
+                  <div *ngIf="!incheckenToegestaan">
+                    <div *ngIf="!inchecken">
+                      <br />
+                      <br />
+                      <br />
+                    </div>
                   </div>
-                  <div *ngIf="inchecken">
-                    <label>Identiteitsgegevens</label>
-                    <input type="text" class="form-control" formControlName="identiteitsid"
-                           [class.is-invalid]="kamerreserveringdetailsormgroup.controls.identiteitsid.invalid && kamerreserveringdetailsormgroup.controls.identiteitsid.touched" ngbAutofocus/>
-                    <small class="text-danger"
-                           [class.d-none]="kamerreserveringdetailsormgroup.controls.identiteitsid.valid || kamerreserveringdetailsormgroup.controls.identiteitsid.untouched"> Vereist
-                    </small>
+
+                  <div *ngIf="incheckenToegestaan">
+                    <div *ngIf="inchecken">
+                      <label>Identiteitsgegevens</label>
+                      <input type="text" class="form-control" formControlName="identiteitsid"
+                             [class.is-invalid]="kamerreserveringdetailsormgroup.controls.identiteitsid.invalid && kamerreserveringdetailsormgroup.controls.identiteitsid.touched" ngbAutofocus/>
+                      <small class="text-danger"
+                             [class.d-none]="kamerreserveringdetailsormgroup.controls.identiteitsid.valid || kamerreserveringdetailsormgroup.controls.identiteitsid.untouched"> Vereist
+                      </small>
+                    </div>
                   </div>
+
                 </div>
               </div>
             </div>
