--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
@@ -11,8 +11,8 @@
     <table class="table table-striped table-sm">
         <thead>
             <tr>
-                <th (click)="clickColumnHandler('naam')">Naam</th>
-                <th (click)="clickColumnHandler('beschrijving')">Beschrijving</th>
+                <th (click)="clickColumnHandler('naam')">Naam<i class="fa fa-fw fa-sort"></i></th>
+                <th (click)="clickColumnHandler('beschrijving')">Beschrijving<i class="fa fa-fw fa-sort"></i></th>
                 <th></th>
             </tr>
         </thead>
