--- a/frontend/src/app/managementportal/components/restaurant/ingredienten/ingredienten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/ingredienten/ingredienten.component.html
@@ -6,14 +6,14 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
-        <th class="handCursor" (click)="clickColumnHandler('eenheid')">Eenheid</th>
-        <th class="handCursor" (click)="clickColumnHandler('prijs')">Prijs</th>
+        <th class="handCursor" (click)="columnSortClickHandler('naam')">Naam</th>
+        <th class="handCursor" (click)="columnSortClickHandler('eenheid')">Eenheid</th>
+        <th class="handCursor" (click)="columnSortClickHandler('prijs')">Prijs</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ingredient of (ingredienten$ | async | sortgrid:field)">
+      <tr *ngFor="let ingredient of (ingredienten$ | async | sortgrid:columnTitle)">
         <td>{{ingredient.naam}}</td>
         <td>{{ingredient.eenheid}}</td>
         <td>{{ingredient.prijs | currency: 'EUR'}}</td>
