--- a/frontend/src/app/managementportal/components/restaurant/reserveringen/reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/reserveringen/reserveringen.component.html
@@ -6,15 +6,15 @@
 <table class="table table-striped table-sm">
   <thead>
     <tr>
-      <th class="handCursor" (click)="clickColumnHandler('aanvangstijd')">Aanvangstijd</th>
-      <th class="handCursor" (click)="clickColumnHandler('personen')">Personen</th>
-      <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
-      <th class="handCursor" (click)="clickColumnHandler('telefoon')">Telefoon</th>
+      <th class="handCursor" (click)="columnSortClickHandler('aanvangstijd')">Aanvangstijd</th>
+      <th class="handCursor" (click)="columnSortClickHandler('personen')">Personen</th>
+      <th class="handCursor" (click)="columnSortClickHandler('naam')">Naam</th>
+      <th class="handCursor" (click)="columnSortClickHandler('telefoon')">Telefoon</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let reservering of (reserveringen$ | async | sortgrid:field)">
+    <tr *ngFor="let reservering of (reserveringen$ | async | sortgrid:columnTitle)">
       <td>{{ reservering.aanvangstijd | date:'dd-MM-yyyy HH:mm'}}</td>
       <td>{{ reservering.personen }}</td>
       <td>{{ reservering.naam }}</td>
