--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -3,15 +3,15 @@
     <table class="table table-striped table-sm">
         <thead>
             <tr>
-                <th>Activiteit</th>
-                <th>Datum</th>
-                <th>Contactgegevens gast</th>
-                <th>Aantal Personen</th>
+                <th class="handCursor" (click)="clickColumnHandler('planning.activiteit.naam')">Activiteit<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('planning.actdate')">Datum<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('emailGast')">Contactgegevens gast<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('aantalPersonen')">Aantal Personen<i class="fa fa-fw fa-sort"></i></th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let reservering of (reserveringen | async)">
+            <tr *ngFor="let reservering of (reserveringen | async | activiteitReserveringenFilter: show | sortgrid:field)">
                 <td>
                     {{reservering.planning.activiteit.naam }}
                 </td>
