--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
@@ -11,15 +11,15 @@
     <table class="table table-striped table-sm">
         <thead>
             <tr>
-                <th (click)="clickColumnHandler('activiteit')">Activiteit<i class="fa fa-fw fa-sort"></i></th>
-                <th (click)="clickColumnHandler('datum')">Datum<i class="fa fa-fw fa-sort"></i></th>
-                <th (click)="clickColumnHandler('prijs')">Prijs<i class="fa fa-fw fa-sort"></i></th>
-                <th (click)="clickColumnHandler('capaciteit')">Capaciteit<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('activiteit.naam')">Activiteit<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('actdate')">Datum<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('actprijs')">Prijs<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('actcapaciteit')">Capaciteit<i class="fa fa-fw fa-sort"></i></th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let activiteitplanning of (activiteitenPlanningen | async | activiteitFilter: show | sortgrid:field)">
+            <tr *ngFor="let activiteitplanning of (activiteitenPlanningen | async | activiteitPlanningFilter: show | sortgrid:field)">
                 <td>
                     {{ activiteitplanning.activiteit.naam }}
                 </td>
