--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
@@ -7,19 +7,26 @@
     </button>
 </div>
 
+<form>
+  <div class="form-group form-inline">
+      Zoek activiteit <input class="form-control ml-2" type="text" [formControl]="filter"/>
+  </div>
+</form>
+
 <div class="table-responsive mt-2">
     <table class="table table-striped table-sm">
         <thead>
             <tr>
-                <th (click)="clickColumnHandler('naam')">Naam<i class="fa fa-fw fa-sort"></i></th>
-                <th (click)="clickColumnHandler('beschrijving')">Beschrijving<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('naam')">Naam<i class="fa fa-fw fa-sort"></i></th>
+                <th class="handCursor" (click)="clickColumnHandler('beschrijving')">Beschrijving<i class="fa fa-fw fa-sort"></i></th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let activiteit of (activiteiten | async | activiteitFilter: show | sortgrid:field)">
-                <td>{{ activiteit.naam }}</td>
-                <td>{{ activiteit.beschrijving }}</td>
+            <tr *ngFor="let activiteit of (activiteiten$ | activiteitFilter: show | sortgrid:field) | async; index as i ">
+                <th scope="row">{{ i + 1 }}</th>
+                <td><ngb-highlight [result]="activiteit.naam | number" [term]="filter.value"></ngb-highlight></td>
+                <td><ngb-highlight [result]="activiteit.beschrijving | number" [term]="filter.value"></ngb-highlight></td>
                 <td class="text-align: right">
                     <i
                         class="fas fa-edit mr-2"
