--- a/frontend/src/app/managementportal/components/kamers/kamer-tabel/kamer-tabel.component.scss
+++ b/frontend/src/app/managementportal/components/kamers/kamer-tabel/kamer-tabel.component.scss
@@ -1,3 +1,44 @@
 table {
   width: 100%;
 }
+.fa-marker {
+	color:green;
+}
+.fa-trash-alt {
+  color: red;
+}
+.fa-edit {
+  color: blue;
+}
+.Noresultfound{
+  color: red;
+}
+.infotext{
+  color: green;
+}
+.room-bucket {
+  padding: 20px;
+ // height: 400px;
+  width: 400px;
+  //position: relative;
+  //left:500px;
+ position: fixed;
+  top:135px;
+ // bottom: 0;
+  right: 60px;
+  border-radius: 4px;
+  overflow-y: auto;
+  background-color: lightgoldenrodyellow;
+  margin-left: 400px;
+}
+
+.table-small{
+  width: 800px;
+}
+.table-small>tbody>tr{
+  cursor: pointer;
+}
+ .table tr.active td {
+  background-color:lightgreen;
+  color: white;
+}
