--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -13,44 +13,44 @@
 <br>
   <app-kamer-tabel [kamers$]="kamers"></app-kamer-tabel>
 
-  <table class="table table-striped table-sm" [class.table-small]="showResButton">
+  <!-- <table class="table table-striped table-sm" [class.table-small]="showResButton">
     <thead>
-    <tr>
-      <th *ngIf="showResButton">Select</th>
-      <th (click)="clickColumnHandler('kamerNaam')">Kamernaam<i class="fa fa-fw fa-sort"></i></th>
+    <tr> -->
+      <!-- <th *ngIf="showResButton">Select</th> -->
+      <!-- <th (click)="clickColumnHandler('kamerNaam')">Kamernaam<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('kamerType')">Kamer type<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('kamerLigging')">Uitizcht<i class="fa fa-fw fa-sort"></i></th>
       <th (click)="clickColumnHandler('aantalPersonen')">Aantal personen<i class="fa fa-fw fa-sort"></i></th>
-      <th (click)="clickColumnHandler('prijs')">Prijs<i class="fa fa-fw fa-sort"></i></th>
-      <th></th>
+      <th (click)="clickColumnHandler('prijs')">Prijs<i class="fa fa-fw fa-sort"></i></th> -->
+      <!-- <th></th> -->
       <!--th *ngIf="showResButton"></th-->
-    </tr>
+    <!-- </tr>
     </thead>
-  </table>
-    <tbody>
-    <div *ngIf="(kamers| async)?.length>0, then welkamers else geenKamers"></div>
-    <ng-template #welkamers>
+  </table> -->
+    <!-- <tbody>
+    <div *ngIf="(kamers| async)?.length>0, then welkamers else geenKamers"></div> -->
+    <!-- <ng-template #welkamers>
     <tr *ngFor="let kamer of (kamers | async | kamersfilter: show | sortgrid:field)">
         <td *ngIf="showResButton">
-            <input  [formControl]="myCheckbox" type="checkbox" (change)="onSelectRoom(kamer)"/>
+            <input  [formControl]="myCheckbox" type="checkbox" (change)="onSelectRoom(kamer)"/> -->
 
-       </td>
-        <td>{{ kamer.kamerNaam }}</td>
+       <!-- </td> -->
+        <!-- <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
         <td>{{ kamer.aantalPersonen }}</td>
-        <td>{{ kamer.prijs | currency: "EUR" }}</td>
-        <td class="text-right">
+        <td>{{ kamer.prijs | currency: "EUR" }}</td> -->
+        <!-- <td class="text-right">
           <i *ngIf="showResButton" class="fas fa-marker mr-2" placement="top" ngbTooltip="Reserveren" (click)="openFormKamerReserveringModal(kamer.kamerNaam)"></i>
           <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Wijzigen" (click)="onSelect(kamer); openEditFormModal()"></i>
           <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="onSelect(kamer); openSm(deleteModal)"></i>
-        </td>
-      </tr>
-    </ng-template>
+        </td> -->
+      <!-- </tr> -->
+    <!-- </ng-template>
     <ng-template #geenKamers>
       <div class="Noresultfound">Helaas geen kamers beschikbaar in deze periode</div>
-      </ng-template>
-    </tbody>
+      </ng-template> -->
+    <!-- </tbody> -->
 
   <!--div class="infotext d-flex justify-content-start" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div-->
   <div class="infotext" *ngIf="showResButton">Selecteer de kamer(s) die u wilt reserveren</div>
@@ -109,3 +109,5 @@
       <button type="button" class="btn btn-success" (click)="deleteRoom(selectedKamer); modal.close('Save click')">Ja</button>
     </div>
   </ng-template>
+
+
